--- a/141B/git_instructions.html
+++ b/141B/git_instructions.html
@@ -36,12 +36,12 @@
 	</ul>
       </p>
       
-      <h4>Check point 1: Complete the <a href="https://try.github.io/">GitHub git tutorial</a>, and download git client for <a href="https://desktop.github.com/">Mac, Windows</a>, or install on linux (google git install for your linux distribution) </h4>
+      <h4>Checkpoint 1: Complete the <a href="https://try.github.io/">GitHub git tutorial</a>, and download git client for <a href="https://desktop.github.com/">Mac, Windows</a>, or install on linux (google git install for your linux distribution)</h4>
       
       <h3>Setting up your repositories</h3>
 
       <p>First you need an account on <a href="https://github.com">GitHub</a>, so create one.  Let's begin by setting up your 141B assignment repository on GitHub.  Once you are logged it, click on "new repository" and then you create a repo under your username named "141B" that is private.<br>
-	<img src="media/141B_repo_create.png"></img>
+	<img src="media/141B_repo_create.png"></img><br>
 	Then initialize the repository according to the instructions, or using the GitHub desktop app.
 	At the 141B repo click on Settings and Collaborators, then add jsharpna and lixyak.</p>
 
