--- a/141B/index.html
+++ b/141B/index.html
@@ -8,6 +8,14 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../stylesheets/github-light.css" media="screen">
+    <style type="text/css">
+      .page-header {
+      background-image:url("../stylesheets/sunflowers.jpg");
+      color: #fff;
+      text-shadow: 0px 0px 4px #9999ff;
+      }
+      
+    </style>
   </head>
   <body>
     <section class="page-header">
