--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+        <style type="text/css">
+      .page-header {
+      background-image:url("stylesheets/waterwise.jpg");
+      color: #fff;
+      text-shadow: 0px 0px 4px #ccccff;
+      }
+    </style>
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Jsharpna.GitHub.io</h1>
-      <h2 class="project-tagline">UC Davis Sharpnack Lab</h2>
+      <h1 class="project-name">UC Davis Sharpnack Lab</h1>
+      <h2 class="project-tagline">Mathematical Sciences Building 4107</h2>
     </section>
 
     <section class="main-content">
