--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
     </section>
 
     <section class="main-content">
-	  <h3>About me.</h3>      <div class="rightbar-wrapper">
-	<div class="rightbar-content">
-
+      <h3>About me.</h3>
+      <div class="section group">
+	<div class="col span_2_left">
       <p>I am an assistant professor at UC Davis in the Statistics department. Before this I was a postdoctoral researcher and lecturer at UCSD in the Mathematics department. I hold a Ph.D in Machine Learning and Statistics from Carnegie Mellon University where my advisors were <a href="http://www.cs.cmu.edu/~aarti/">Aarti Singh</a> and <a href="http://www.stat.cmu.edu/~arinaldo/">Alessandro Rinaldo</a>.  In my research, I develop and study computationally efficient statistical methodology for understanding complex phenomena in large datasets.</p>
 	</div>
-	<div class="rightbar-sidebar">
-	  <img width=300 src="stylesheets/boardPortrait.JPG" />
-        </div>
-	<div class="cleared"></div>
+	<div class="col span_2_right">
+	  <img src="stylesheets/boardPortrait.JPG" />
 	</div>
+      </div>
 
 <h3>Teaching</h3>
 <ol>
