--- a/141B/git_instructions.html
+++ b/141B/git_instructions.html
@@ -45,7 +45,6 @@
 	Then initialize the repository according to the instructions, or using the GitHub desktop app.
 	At the 141B repo click on Settings and Collaborators, then add jsharpna and lixyak.</p>
 
-      <p><b>A quick note:</b> Files on your computer are just a bunch of bytes (strings of 0's and 1's) on your harddrive.  A plain text editor reads these as characters via ASCII, which is a dictionary that converts bytes to characters (like how Ribosomes convert RNA base pairs to amino acids).  So you can start a new file using an editor like emacs, vi, or notepad, and write something there like "Hello world." and then save it as "hello.txt" or "hello" or whatever.  Then it writes the bytes that those characters correspond to on your hard drive.  If you do the same thing in Word and save it as a Word file, then Word converts it to a different set of bytes and this process is proprietary (it is a closely guarded secret like the recipe for CocaCola).  Never send me a Word document, when I open it in emacs it will look like \320\317^Q\340\241\261^Z\341^@^@^@^@^@^@^@^@ and you may lose points.</p>
 
       <h4>Checkpoint 2: In your 141B repo, add a file titled "info.txt" with your full name, major, and what you want to get out of this class (separate each of these by a new line).  Git add, commit with a message, and push.</h4>
 
@@ -54,7 +53,7 @@
       <h4>Checkpoint 3: Go to <a href="https://pages.github.com/">GitHub pages</a> and follow the instructions to initialize the special website repository.  Then use the automatic page generator <a href="https://help.github.com/articles/creating-pages-with-the-automatic-generator/">here</a> and choose your favorite template.  You should end with a boilerplate index.html that you can get to via [username].github.io.</h4>
       
       <footer class="site-footer">
-
+	Copyright James Sharpnack &copy; 2016
       </footer>
 
     </section>
