--- a/index.html
+++ b/index.html
@@ -36,10 +36,20 @@
 
 <h3>Teaching</h3>
 <ol>
+  <li><a href="https://docs.google.com/document/d/15snbrjlwUYmwj4voSA_33qqtMxHrYXKlhnElGK1dPC0/edit?usp=sharing">Stats 290</a>: Statistics Seminar Series</li>
   <li><a href="141B/index.html">Stats 141B</a>: Data & Web Technologies for Data Analysis</li>
   <li><a href="208/index.html">Stats 208</a>: Machine Learning</li>
 </ol>
-	  
+
+<h3>Students</h3>
+<ol>
+  <li>Liwei Wu, PhD Student</li>
+  <li>Xiaoyue Li, PhD Student</li>
+  <li>Yujun Chen, Masters Student</li>
+  <li>Andrew Chin, Undergraduate Student</li>
+
+<h3>Research</h3>
+  
     </section>
 
   
