--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">UC Davis Sharpnack Lab</h1>
-      <h2 class="project-tagline">James Sharpnack <br>Mathematical Sciences Building 4107</h2>
+      <h2 class="project-tagline">James Sharpnack <br>Mathematical Sciences Building 4107<br>jsharpna@ucdavis.edu</h2>
     </section>
 
     <section class="main-content">
@@ -47,8 +47,27 @@
   <li>Xiaoyue Li, PhD Student</li>
   <li>Yujun Chen, Masters Student</li>
   <li>Andrew Chin, Undergraduate Student</li>
-
+</ol>
+  
 <h3>Research</h3>
+
+<div class="section group">
+<div class="col span_half">
+  <a href="research/graphsignal.html"><img src="media/As_slide.png" type="application/pdf"></img></a>
+</div>
+<div class="col span_half">
+  <a href="research/graphsignal.html"><h4>Graph Structured Signal Processing</h4>
+  (6 publications)<br></a>
+  Traditional signal processing techniques such as wavelet denoising and kernel smoothing, implicitly assume that the domain is homogeneous.  Graph structure provides us with a more flexible framework for filters over heterogeneous media, social networks, or semantic information.
+</div>
+</div>
+
+
+<h3>Resources</h3>
+
+<ol>
+  <li>Starting your data science portfolio: <a href="141B/workflow.html">your workflow</a>, <a href="141B/git_instructions.html">git and GitHub</a></li>
+</ol>
   
     </section>
 
