--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   
 <h3>Research</h3>
 
-<div class="section group">
+<div class="pubsec section group">
 <div class="col span_half">
   <a href="research/graphsignal.html"><img src="media/As_slide.png" type="application/pdf"></img></a>
 </div>
@@ -62,6 +62,30 @@
 </div>
 </div>
 
+<div class="pubsec section group">
+<div class="col span_half">
+  <a href="research/graphsignal.html"><h4>Scan Statistics over Networks</h4>
+    (? publications)<br></a>
+    We develop novel methodology for detecting faint signals in sensor networks and images.
+  In images, much more can be done, and we develop a precise asymptotic analysis for fast scanning tools based on convolutional feedforward neural nets.
+  In general graphs, we look at approximation algorithms for the generalized likelihood ratio test.
+</div>
+<div class="col span_half">
+  <a href="research/scan.html"><img width="60%" src="media/graphscan.png" type="application/pdf"></img></a>
+</div>
+</div>
+
+<div class="pubsec section group">
+<div class="col span_half">
+  <a href="research/nonpara.html"><img src="media/noisyFused2.png" type="application/pdf"></img></a>
+</div>
+<div class="col span_half">
+  <a href="research/nonpara.html"><h4>Nonparametric Estimation</h4>
+  (? publications)<br></a>
+  Here we look at the fused lasso and trend filtering, which are locally adaptive non-linear filters that can outperform wavelet denoising.
+  We also explore heteroscedasticity in high-dimensional models, for variance function estimation and locating master regulators in genomics data.
+</div>
+</div>
 
 <h3>Resources</h3>
 
@@ -69,8 +93,11 @@
   <li>Starting your data science portfolio: <a href="141B/workflow.html">your workflow</a>, <a href="141B/git_instructions.html">git and GitHub</a></li>
 </ol>
   
-    </section>
 
-  
+
+      <footer class="site-footer">
+	Copyright James Sharpnack &copy; 2016
+     </footer>
+    </section>  
   </body>
 </html>
