--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 
 <div class="pubsec section group">
 <div class="col span_half">
-  <a href="research/graphsignal.html"><h4>Scan Statistics over Networks</h4>
-    (? publications)<br></a>
+  <a href="research/scan.html"><h4>Scan Statistics over Networks</h4>
+    (6 publications)<br></a>
     We develop novel methodology for detecting faint signals in sensor networks and images.
-  In images, much more can be done, and we develop a precise asymptotic analysis for fast scanning tools based on convolutional feedforward neural nets.
+  In images we develop a precise asymptotic analysis for fast scanning tools based on convolutional feedforward neural nets.
   In general graphs, we look at approximation algorithms for the generalized likelihood ratio test.
 </div>
 <div class="col span_half">
@@ -80,8 +80,8 @@
   <a href="research/nonpara.html"><img src="media/noisyFused2.png" type="application/pdf"></img></a>
 </div>
 <div class="col span_half">
-  <a href="research/nonpara.html"><h4>Nonparametric Estimation</h4>
-  (? publications)<br></a>
+  <a href="research/nonpara.html"><h4>Estimation in High-dimensions</h4>
+  (3 publications)<br></a>
   Here we look at the fused lasso and trend filtering, which are locally adaptive non-linear filters that can outperform wavelet denoising.
   We also explore heteroscedasticity in high-dimensional models, for variance function estimation and locating master regulators in genomics data.
 </div>
