--- a/research/nonpara.html
+++ b/research/nonpara.html
@@ -12,15 +12,33 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Scan Statistics over Networks</h1>
+      <h1 class="project-name">Estimation in High-dimensions</h1>
       <h2 class="project-tagline">UC Davis Sharpnack Lab</h2>
     </section>
 
     <section class="main-content">
 
 
-<div class="pub">
-</div>
+      <div class="pub">
+	<b>Approximate Recovery in Changepoint Problems, from L2 Estimation Error Rates</b> (<a href="http://arxiv.org/abs/1606.06746"><font color = "#0000FF">arXiv</font></a>)<br>
+	Kevin Lin, James Sharpnack, Alessandro Rinaldo, Ryan J. Tibshirani<br>
+	In Submission.
+      </div>
+
+      <div class="pub">
+	<b>Mean and Variance Estimation in High-dimensional Heteroscedastic Models with Non-convex Penalties</b>
+	(<a href="http://arxiv.org/abs/1410.7874"><font color = "#0000FF">arXiv</font></a>)<br>
+	J. Sharpnack and M. Kolar<br>
+	In Submission.
+	</div>
+      
+      <div class="pub">
+	<b>Variance Funtion Estimation in High-Dimensions</b>
+(<a href="http://icml.cc/2012/papers/722.pdf"><font color = "#0000FF">pdf</font></a>)<br>
+M. Kolar, and J. Sharpnack <br>
+<a href="http://techtalks.tv/talks/variance-function-estimation-in-high-dimensions/57334/">With Oral Presentation</a><br>
+International Conference of Machine Learning, ICML 2012
+      </div>
 
 
     </section>
