--- a/research/scan.html
+++ b/research/scan.html
@@ -18,11 +18,63 @@
 
     <section class="main-content">
 
-
-<div class="pub">
+<div class="pubsec section group">
+<div class="col span_half">
+  <a href="research/scan.html"><h4>Scan Statistics over Networks</h4>
+    (6 publications)<br></a>
+    We develop novel methodology for detecting faint signals in sensor networks and images.
+  In images we develop a precise asymptotic analysis for fast scanning tools based on convolutional feedforward neural nets.
+  In general graphs, we look at approximation algorithms for the generalized likelihood ratio test.
+</div>
+<div class="col span_half">
+  <a href="research/scan.html"><img width="60%" src="../media/graphscan.png" type="application/pdf"></img></a>
+</div>
 </div>
 
+      
+      <div class="pub">
+	<b>Exact Asymptotics for the Scan Statistic and Fast Alternatives</b>
+	(<a href="http://arxiv.org/abs/1409.7127"><font color = "#0000FF">arXiv</font></a>)<br>
+	J. Sharpnack and E. Arias-Castro<br>
+	Electronic Journal of Statistics, 2016
+	</div>
 
+      <div class="pub">	
+	<b>Detecting Anomalous Activity on Networks with the Graph Fourier Scan Statistic</b>
+	(<a href="http://arxiv.org/abs/1311.7217"><font color = "#0000FF">arXiv</font></a>)<br>
+	J. Sharpnack, A. Rinaldo, and A. Singh<br>
+	IEEE Transaction on Signal Processing, 2016
+      </div>
+
+      <div class="pub">
+	<b>Near-optimal Anomaly Detection in Graphs using Lovasz Extended Scan Statistic</b>
+(<a href="http://arxiv.org/abs/1312.3291"><font color = "#0000FF">arXiv</font></a>)<br>
+J. Sharpnack, A. Krishnamurthy, and A. Singh<br>
+Neural Information Processing Systems (NIPS), 2013.
+      </div>
+
+      <div class="pub">
+	<b>Near-optimal and Computationally Efficient Detectors for Weak and Sparse Graph-structured Patterns</b>
+(<a href="downloads/globalsip_detectors.pdf"><font color = "#0000FF">pdf</font></a>)<br>
+J. Sharpnack and A. Singh<br>
+IEEE Global Conference on Signal and Information Processing (GlobalSIP), 2013
+      </div>
+
+      <div class="pub">
+	<b>Detecting Activations over Graphs using Spanning Tree Wavelet Bases</b>
+(<a href="http://arxiv.org/abs/1206.0937"><font color = "#0000FF">arXiv</font></a>)<br>
+J. Sharpnack, A. Krishnamurthy, and A. Singh<br>
+<i><a href="http://techtalks.tv/talks/detecting-activations-over-graphs-using-spanning-tree-wavelet-bases/58070/">With Oral Presentation</a></i><br>
+International Conference on Artificial Intelligence and Statistics (AIStats), 2013
+      </div>
+
+      <div class="pub">
+	<b>Changepoint Detection over Graphs with the Spectral Scan Statistic</b>
+(<a href="http://arxiv.org/abs/1206.0773"><font color = "#0000FF">arXiv</font></a>)<br>
+J. Sharpnack, A. Rinaldo, and A. Singh<br>
+	International Conference on Artificial Intelligence and Statistics (AIStats), 2013
+	</div>
+      
     </section>
 
   
