--- a/141B/index.html
+++ b/141B/index.html
@@ -40,8 +40,8 @@
 <h2>Syllabus</h2>
 <table>
   <tr><th>Lesson</th><th>Technology</th><th>Principles</th></tr>
-  <tr><td>1: Data science workflow</td><td>Text editors, ipython, Jupyter</td><td>Programming basics, data science presentation</td></tr>
-  <tr><td>2: Collaborating with git</td><td>git, command line</td><td>Versioning systems</td>
+  <tr><td><a href="workflow.html">1: Data science workflow</a></td><td>Text editors, ipython, Jupyter</td><td>Programming basics, data science presentation</td></tr>
+  <tr><td><a href="git_instructions.html">2: Collaborating with git</a></td><td>git, command line</td><td>Versioning systems</td>
   <tr><td>3: Python basics</td><td>strings, numbers, lists, dictionaries, looping</td><td>Data structures</td>
   <tr><td>4: Python basics</td><td>def, import, iterables</td><td>Writing modular code, variable scope</td>
   <tr><td>5: Matrices in python</td><td>numpy, array, random</td><td>Vectorization, simulation</td></tr>
@@ -57,6 +57,10 @@
   <tr><td>15: Data visualization</td><td>plotly, ggplot</td><td>Graphics grammar</td></tr>
   <tr><td>16: Interactive data visualization</td><td>javascript basics, D3</td><td>Server side/client side processing, embedded script</td></tr>
 </table>
+
+      <footer class="site-footer">
+	Copyright James Sharpnack &copy; 2016
+     </footer>
 
     </section>
 
