--- a/research/graphsignal.html
+++ b/research/graphsignal.html
@@ -46,7 +46,7 @@ International Conference on Artificial Intelligence and Statistics (AIStats), 20
 
 <div class="pub">
 <b>A Path Algorithm for Localizing Anomalous Activity in Graphs</b>
-(<a href="downloads/globalsip_path.pdf"><font color = "#0000FF">pdf</font></a>)<br>
+(<a href="globalsip_path.pdf"><font color = "#0000FF">pdf</font></a>)<br>
 J. Sharpnack<br>
 IEEE Global Conference on Signal and Information Processing (GlobalSIP), 2013
 </div>
@@ -61,18 +61,22 @@ Asilomar Conference on Signals, Systems, and Computers, 2013
 
 <div class="pub">
 <b>Sparsistency of the Edge Lasso over Graphs</b>
-(<a href="downloads/AISTATS12_JSharpnack.pdf"><font color = "#0000FF">pdf</font></a>)<br>
+(<a href="AISTATS12_JSharpnack.pdf"><font color = "#0000FF">pdf</font></a>)<br>
 J. Sharpnack, A. Rinaldo, and A. Singh<br>
 International Conference on Artificial Intelligence and Statistics (AIStats), 2012.
 </div>
 
 <div class="pub">
 <b>Identifying Graph-structured Activation Patterns in Networks</b>
-(<a href="downloads/NIPSjsharpna.pdf"><font color = "#0000FF">pdf</font></a>)<br>
+(<a href="NIPSjsharpna.pdf"><font color = "#0000FF">pdf</font></a>)<br>
 J. Sharpnack, and A. Singh<br>
 <i><a href="http://videolectures.net/nips2010_sharpnack_igs/">With Oral Presentation</a></i><br>
 Neural Information Processing Systems (NIPS), 2010
 </div>
+
+      <footer class="site-footer">
+	Copyright James Sharpnack &copy; 2016
+     </footer>
 
     </section>
 
