--- a/research/nonpara.html
+++ b/research/nonpara.html
@@ -34,12 +34,15 @@
       
       <div class="pub">
 	<b>Variance Funtion Estimation in High-Dimensions</b>
-(<a href="http://icml.cc/2012/papers/722.pdf"><font color = "#0000FF">pdf</font></a>)<br>
+(<a href="icml_hetero.pdf"><font color = "#0000FF">pdf</font></a>)<br>
 M. Kolar, and J. Sharpnack <br>
 <a href="http://techtalks.tv/talks/variance-function-estimation-in-high-dimensions/57334/">With Oral Presentation</a><br>
 International Conference of Machine Learning, ICML 2012
       </div>
 
+      <footer class="site-footer">
+	Copyright James Sharpnack &copy; 2016
+     </footer>
 
     </section>
 
