--- a/research/scan.html
+++ b/research/scan.html
@@ -55,7 +55,7 @@ Neural Information Processing Systems (NIPS), 2013.
 
       <div class="pub">
 	<b>Near-optimal and Computationally Efficient Detectors for Weak and Sparse Graph-structured Patterns</b>
-(<a href="downloads/globalsip_detectors.pdf"><font color = "#0000FF">pdf</font></a>)<br>
+(<a href="globalsip_detectors.pdf"><font color = "#0000FF">pdf</font></a>)<br>
 J. Sharpnack and A. Singh<br>
 IEEE Global Conference on Signal and Information Processing (GlobalSIP), 2013
       </div>
@@ -75,6 +75,9 @@ J. Sharpnack, A. Rinaldo, and A. Singh<br>
 	International Conference on Artificial Intelligence and Statistics (AIStats), 2013
 	</div>
       
+      <footer class="site-footer">
+	Copyright James Sharpnack &copy; 2016
+     </footer>
     </section>
 
   
