--- a/research/nonpara.html
+++ b/research/nonpara.html
@@ -18,6 +18,17 @@
 
     <section class="main-content">
 
+<div class="pubsec section group">
+<div class="col span_half">
+  <a href="research/nonpara.html"><img src="../media/noisyFused2.png" type="application/pdf"></img></a>
+</div>
+<div class="col span_half">
+  <a href="research/nonpara.html"><h4>Estimation in High-dimensions</h4>
+  (3 publications)<br></a>
+  Here we look at the fused lasso and trend filtering, which are locally adaptive non-linear filters that can outperform wavelet denoising.
+  We also explore heteroscedasticity in high-dimensional models, for variance function estimation and locating master regulators in genomics data.
+</div>
+</div>
 
       <div class="pub">
 	<b>Approximate Recovery in Changepoint Problems, from L2 Estimation Error Rates</b> (<a href="http://arxiv.org/abs/1606.06746"><font color = "#0000FF">arXiv</font></a>)<br>
