--- a/research/scan.html
+++ b/research/scan.html
@@ -34,7 +34,7 @@
       
       <div class="pub">
 	<b>Exact Asymptotics for the Scan Statistic and Fast Alternatives</b>
-	(<a href="http://arxiv.org/abs/1409.7127"><font color = "#0000FF">arXiv</font></a><a href="https://github.com/jsharpna/adascan">code on github</a><br>
+	(<a href="http://arxiv.org/abs/1409.7127"><font color = "#0000FF">arXiv</font></a>, <a href="https://github.com/jsharpna/adascan">code on github</a><br>
 	J. Sharpnack and E. Arias-Castro<br>
 	Electronic Journal of Statistics, 2016
 	</div>
