--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
 <ol>
   <li>Starting your data science portfolio: <a href="141B/workflow.html">your workflow</a>, <a href="141B/git_instructions.html">git and GitHub</a></li>
+  <li>Massive list of <a href="https://github.com/caesar0301/awesome-public-datasets">public datasets</a></li>
 </ol>
   
 
