--- a/141B/git_instructions.html
+++ b/141B/git_instructions.html
@@ -40,7 +40,7 @@
       
       <h3>Setting up your repositories</h3>
 
-      <p>First you need an account on <a href="https://github.com">GitHub</a>, so create one.  Let's begin by setting up your 141B assignment repository on GitHub.  Once you are logged it, click on "new repository" and then you create a repo under your username named "141B" that is private.<br>
+      <p>First you need an account on <a href="https://github.com">GitHub</a>, so create one.  You should look into getting the <a href="https://education.github.com/pack">free student developer pack</a>  Let's begin by setting up your 141B assignment repository on GitHub.  Once you are logged it, click on "new repository" and then you create a repo under your username named "141B" that is private.<br>
 	<img src="media/141B_repo_create.png"></img><br>
 	Then initialize the repository according to the instructions, or using the GitHub desktop app.
 	At the 141B repo click on Settings and Collaborators, then add jsharpna and lixyak.</p>
