--- a/141B/index.html
+++ b/141B/index.html
@@ -42,7 +42,7 @@
   <tr><th>Lesson</th><th>Technology</th><th>Principles</th></tr>
   <tr><td><a href="workflow.html">1: Data science workflow</a></td><td>Text editors, ipython, Jupyter</td><td>Programming basics, data science presentation</td></tr>
   <tr><td><a href="git_instructions.html">2: Collaborating with git</a></td><td>git, command line</td><td>Versioning systems</td>
-  <tr><td>3: Python basics</td><td>strings, numbers, lists, dictionaries, looping</td><td>Data structures</td>
+  <tr><td><a href="pythonbasics.html">3: Python basics</a></td><td>strings, numbers, lists, dictionaries, looping</td><td>Data structures</td>
   <tr><td>4: Python basics</td><td>def, import, iterables</td><td>Writing modular code, variable scope</td>
   <tr><td>5: Matrices in python</td><td>numpy, array, random</td><td>Vectorization, simulation</td></tr>
   <tr><td>6: Data manipulation</td><td>pandas, DataFrame</td><td>Dealing with missingness, basic statistics</td></tr>
