--- a/141B/git_instructions.html
+++ b/141B/git_instructions.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">141B: Module 1</h1>
+      <h1 class="project-name">141B: Lesson 2</h1>
       <h2 class="project-tagline">Starting your data science portfolio with GitHub</h2>
     </section>
 
