--- a/141B/workflow.html
+++ b/141B/workflow.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>141B: Starting your data science portfolio with GitHub</title>
+    <title>141B: Your data science workflow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -12,7 +12,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">141B: Module 1</h1>
+      <h1 class="project-name">141B: Lesson 1 1</h1>
       <h2 class="project-tagline">Your Data Science Workflow</h2>
     </section>
 
