--- a/141B/pythonbasics.html
+++ b/141B/pythonbasics.html
@@ -84,7 +84,7 @@
 
       <div class="youtube">
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/4zJJX5Tbwxo" frameborder="0" allowfullscreen></iframe>
-	<b>Data Structures:</b> A little bit about data structures
+	<b>Data Structures:</b> A little bit about data structures, correction: I said that list lookup takes linear time, when I meant to say constant time (which I haven't defined yet).
       </div>
 
       <div class="youtube">
@@ -92,6 +92,15 @@
 	<b>Testing these algorithms:</b> we compare list.index, dictionaries, and sorted lists <a href="code/datastruct.py">(code)</a>
       </div>
 
+      <h4>Checkpoint 3: by the end of this lesson, you should make sure you are familiar with the following...
+	<ul>
+	  <li>Basic python types: int, string, float, list, tuple, dict</li>
+	  <li>Methods: ex. list.append(), string.split(), len(list)</li>
+	  <li>Control & flow: if, then, else, for, while</li>
+	  <li>List comprehensions and generator expressions</li>
+	  <li>Reading from files</li>
+	</ul>
+      </h4>
       
      <footer class="site-footer">
 	Copyright James Sharpnack &copy; 2016
