--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
   <li>Yujun Chen, Masters Student</li>
   <li>Andrew Chin, Undergraduate Student</li>
 </ol>
-  
+
+<h3>Professional Membership</h3>
+<ol>
+  <li>Institute of Mathematical Statistics</li>
+  <li>Bernoulli Society</li>
+  <li>IEEE, Signal Processing Society</li>
+</ol>
+
 <h3>Research</h3>
 
 <div class="pubsec section group">
