--- a/141B/index.html
+++ b/141B/index.html
@@ -42,11 +42,11 @@
   <tr><th>Lesson</th><th>Technology</th><th>Principles</th></tr>
   <tr><td><a href="workflow.html">1: Data science workflow</a></td><td>Text editors, ipython, Jupyter</td><td>Programming basics, data science presentation</td></tr>
   <tr><td><a href="git_instructions.html">2: Collaborating with git</a></td><td>git, command line</td><td>Versioning systems</td>
-  <tr><td><a href="pythonbasics.html">3: Python basics</a></td><td>strings, numbers, lists, dictionaries, looping</td><td>Data structures</td>
-  <tr><td>4: Python basics</td><td>def, import, iterables</td><td>Writing modular code, variable scope</td>
-  <tr><td>5: Matrices in python</td><td>numpy, array, random</td><td>Vectorization, simulation</td></tr>
-  <tr><td>6: Data manipulation</td><td>pandas, DataFrame</td><td>Dealing with missingness, basic statistics</td></tr>
-  <tr><td>7: Reading data</td><td>pandas, csv</td><td>Data latency, processing data in batches, sufficient statistics</td></tr>
+  <tr><td><a href="pythonbasics.html">3: Python basics</a></td><td>strings, numbers, lists, dictionaries, looping, def</td><td>Sequential programming, variable scope, modular code</td>
+  <tr><td><a href="pythonadvanced.html">4: More Python</a></td><td>built-in functions, dictionaries, iterables, pythonic programming</td><td>object-oriented programming, data structures</td>
+  <tr><td><a href="matrices.html">5: Matrices in python</a></td><td>numpy, array</td><td>Vectorization</td></tr>
+  <tr><td><a href="readingdata.html">6: Reading data</a></td><td>open, csv, pandas</td><td>Data latency, processing data in batches</td></tr>
+  <tr><td>7: Data manipulation</td><td>pandas, DataFrame</td><td>Dealing with missingness, basic statistics</td></tr>
   <tr><td>8: Data wrangling</td><td>pandas</td><td>Merging and transforming data</td></tr>
   <tr><td>9: String manipulation</td><td>regular expressions, grep, nltk</td><td>From text to numbers, n-grams</td></tr>
   <tr><td>10: Plotting basics</td><td>matplotlib</td><td>Plotting sense</td></tr>
