--- a/141B/index.html
+++ b/141B/index.html
@@ -46,10 +46,10 @@
   <tr><td><a href="pythonadvanced.html">4: More Python</a></td><td>built-in functions, dictionaries, iterables, pythonic programming</td><td>object-oriented programming, data structures</td>
   <tr><td><a href="matrices.html">5: Matrices in python</a></td><td>numpy, array</td><td>Vectorization</td></tr>
   <tr><td><a href="readingdata.html">6: Reading data</a></td><td>open, csv, pandas</td><td>Data latency, processing data in batches</td></tr>
-  <tr><td>7: Data manipulation</td><td>pandas, DataFrame</td><td>Dealing with missingness, basic statistics</td></tr>
-  <tr><td>8: Data wrangling</td><td>pandas</td><td>Merging and transforming data</td></tr>
-  <tr><td>9: String manipulation</td><td>regular expressions, grep, nltk</td><td>From text to numbers, n-grams</td></tr>
-  <tr><td>10: Plotting basics</td><td>matplotlib</td><td>Plotting sense</td></tr>
+  <tr><td>7: Plotting basics</td><td>matplotlib</td><td>Plotting sense</td></tr>
+  <tr><td><a href="datawrangling.html">8: Data wrangling</a></td><td>pandas, DataFrame</td><td>Slicing, thinking like Pandas</td></tr>
+  <tr><td>9: Data wrangling 2</td><td>indexing, groupby, join, pandas plotting</td><td>Indexing, Merging and transforming data</td></tr>
+  <tr><td>10: String manipulation</td><td>regular expressions, grep, nltk</td><td>From text to numbers, n-grams</td></tr>
   <tr><td>11: Databases</td><td>sqlalchemy, query</td><td>Database systems</td></tr>
   <tr><td>12: Web data</td><td>api, request, html</td><td>Internet basics, data aquisition ethics</td></tr>
   <tr><td>13: Processing web data</td><td>json, beautifulsoup</td><td>Hypertext languages, structured data</td></tr>
