--- a/141B/matrices.html
+++ b/141B/matrices.html
@@ -59,6 +59,14 @@ This lesson is based on the following links, and you can follow along with the j
       </div>
 
       *Correction: <code>seeds[1:10,:]</code> gives you the 2nd to the 10th rows (row 1 to row 9)
+
+      <h3>Checkpoint: Load the seeds dataset and compute the following using only vectorization (no loops):
+	<ul>
+	  <li>1. mean and std of Area / (Length * Width)</li>
+	  <li>2. sort the records by Area</li>
+	  <li>3. make a matrix of the entries with the Area greater than the median Area</li>
+	</ul>
+      </h3>
       
      <footer class="site-footer">
 	Copyright James Sharpnack &copy; 2016
