--- a/141B/workflow.html
+++ b/141B/workflow.html
@@ -146,11 +146,11 @@
       <h4>Checkpoint 4: In preparation for the lab you should do the following to test everything:
       <ul>
 	<li>Create a directory, call it mod1</li>
-	<li>Save the python file <a href="">here</a> into this directory</li>
+	<li>Save the python file <a href="code/testworkflow.py">here</a> into this directory</li>
 	<li>Load that python file into your text editor and replace the capitalized words in the code with something appropriate (ex. replace INTEGER with 7)</li>
 	<li>Start a new jupyter python notebook, title it workflowtest</li>
-	<li>Run it line by line in Jupyter</li>
-	<li>Add markdown above each line explaining what you think it is doing</li>
+	<li>Run it in Jupyter</li>
+	<li>Add markdown explaining what you think it is doing</li>
 	<li>Save this notebook</li>
 	</ul></h4>
 
