--- a/141B/index.html
+++ b/141B/index.html
@@ -46,7 +46,7 @@
   <tr><td><a href="pythonadvanced.html">4: More Python</a></td><td>built-in functions, dictionaries, iterables, pythonic programming</td><td>object-oriented programming, data structures</td>
   <tr><td><a href="matrices.html">5: Matrices in python</a></td><td>numpy, array</td><td>Vectorization</td></tr>
   <tr><td><a href="readingdata.html">6: Reading data</a></td><td>open, csv, pandas</td><td>Data latency, processing data in batches</td></tr>
-  <tr><td>7: Plotting basics</td><td>matplotlib</td><td>Plotting sense</td></tr>
+  <tr><td><a href="matplotlib.html">7: Plotting basics</a></td><td>matplotlib</td><td>Plotting sense</td></tr>
   <tr><td><a href="datawrangling.html">8: Data wrangling</a></td><td>pandas, DataFrame</td><td>Slicing, thinking like Pandas</td></tr>
   <tr><td>9: Data wrangling 2</td><td>indexing, groupby, join, pandas plotting</td><td>Indexing, Merging and transforming data</td></tr>
   <tr><td>10: String manipulation</td><td>regular expressions, grep, nltk</td><td>From text to numbers, n-grams</td></tr>
