--- a/141B/matplotlib.html
+++ b/141B/matplotlib.html
@@ -59,7 +59,7 @@ Follow along with the following example with the <a href="code/Matplotlib.ipynb"
       </ul>
 
       <div class="youtube">
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/oCF40pmKC_c" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Or1mdXSIDbs" frameborder="0" allowfullscreen></iframe>
 	<b>Matplotlib: bar, pie, boxplot, violinplot, subplots
 	</b>
       </div>
