--- a/141B/workflow.html
+++ b/141B/workflow.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">141B: Lesson 1 1</h1>
+      <h1 class="project-name">141B: Lesson 1</h1>
       <h2 class="project-tagline">Your Data Science Workflow</h2>
     </section>
 
@@ -152,7 +152,7 @@
 	<li>Run it in Jupyter</li>
 	<li>Add markdown explaining what you think it is doing</li>
 	<li>Save this notebook</li>
-	</ul></h4>
+      </ul></h4>
 
       
       <footer class="site-footer">
