--- a/141B/git_instructions.html
+++ b/141B/git_instructions.html
@@ -43,7 +43,7 @@
       <p>First you need an account on <a href="https://github.com">GitHub</a>, so create one.  You should look into getting the <a href="https://education.github.com/pack">free student developer pack</a>.
       Now, you should set up your personal site, which will serve as your 'data science portfolio'.  So a browser like Firefox is just a program that can interpret certain file formats, like html.  When you point your browser to a folder, like https://github.com/ it looks for a file called index.html there, interprets, and displays it.  Every other file (like this one that you are reading now) need to be pointed to by name on your browser.  We'll start by initializing the repository with the GitHub automatic page generator:</p> 
 
-      <h4>Checkpoint 3: Go to <a href="https://pages.github.com/">GitHub pages</a> and follow the instructions to initialize the special website repository.  Then use the automatic page generator <a href="https://help.github.com/articles/creating-pages-with-the-automatic-generator/">here</a> and choose your favorite template.  You should end with a boilerplate index.html that you can get to via [username].github.io.</h4>
+      <h4>Checkpoint: Go to <a href="https://pages.github.com/">GitHub pages</a> and follow the instructions to initialize the special website repository.  Then use the automatic page generator <a href="https://help.github.com/enterprise/2.8/user/articles/creating-pages-with-the-automatic-generator/">here</a> and choose your favorite template.  You should end with a boilerplate index.html that you can get to via [username].github.io.</h4>
 
       <h3>HTML and CSS</h3>
 
