added jupyter link

--- a/141B/workflow.html
+++ b/141B/workflow.html
@@ -142,7 +142,8 @@
 	To install run <code>pip install jupyter</code> and then you can go to a directory with code that you would edit and run <code>jupyter notebook</code>.
 	Then your browser should open and you should see the file directory there.
       </p>
-
+      <h4>Checkpoint: Read through this <a href="https://www.dataquest.io/blog/jupyter-notebook-tips-tricks-shortcuts/"> excellent tutorial on jupyter</a> to see many of the ways that you can use it.</h4>
+	  
       <h4>Checkpoint 4: In preparation for the lab you should do the following to test everything:
       <ul>
 	<li>Create a directory, call it mod1</li>
