--- a/141B/index.html
+++ b/141B/index.html
@@ -50,8 +50,8 @@
   <tr><td><a href="datawrangling.html">8: Data wrangling</a></td><td>pandas, DataFrame, pandas plotting</td><td>Slicing, thinking like Pandas</td></tr>
   <tr><td><a href="datawrangling2.html">9: Data wrangling 2</a></td><td>indexing, groupby, join</td><td>Indexing, Merging and transforming data</td></tr>
   <tr><td><a href="api.html">10: Web data</a></td><td>api, request, json</td><td>Internet basics, data aquisition</td></tr>
-  <tr><td>11: Databases</td><td>sqlalchemy, query</td><td>Database systems</td></tr>
-  <tr><td>12: String manipulation</td><td>regular expressions, grep, nltk</td><td>From text to numbers, n-grams</td></tr>
+  <tr><td><a href="learningtext.html">11: Learning from Text</a></td><td>nltk, scikit-learn, tokenization</td><td>From text to numbers, n-grams</td></tr>
+  <tr><td>12: Databases</td><td>sqlalchemy, query</td><td>Database systems</td></tr>
   <tr><td>13: Processing web data</td><td>html, xml, beautifulsoup</td><td>Hypertext languages, structured data</td></tr>
   <tr><td>14: Geographical data</td><td>geoplotlib, geopy</td><td>Honest plots, choosing context</td></tr>
   <tr><td>15: Data visualization</td><td>plotly, ggplot</td><td>Graphics grammar</td></tr>
