--- a/141B/learningtext.html
+++ b/141B/learningtext.html
@@ -91,6 +91,10 @@ This requires such a similarity measure, and typically this will be designed bas
   We will focus instead on nearest-neighbors classifiers that use a similarity measure to classify new documents from labelled documents.
 </p>
 
+      <div class="youtube">
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/sFMhcK39qjY" frameborder="0" allowfullscreen></iframe>
+	<b>Nearest neighbors</b>
+      </div>
 
 
 <h3>Bag-of-words Model</h3>
@@ -146,9 +150,6 @@ Similarities based on the bag of words or bag of n-grams models typically compar
   We can use the same ideas to do this with n-grams, by thinking of n-grams as our lemmas instead of individual tokens.
 </p>
 
-      <div class="youtube">
-	<b>Nearest neighbors</b>
-      </div>
 
 
 <h4>Checkpoint: Go through the jupyter notebook.</h4>
