--- a/141B/learningtext.html
+++ b/141B/learningtext.html
@@ -57,7 +57,13 @@ You can follow along with <a href="code/Learning Text.ipynb">the Jupyter noteboo
   We will discuss n-grams in the bag-of-words models section.
 </p>
   
-<h4>Checkpoint: Read through <a href="http://nlp.stanford.edu/IR-book/html/htmledition/stemming-and-lemmatization-1.html">this description of stemming and lemmatization.</a></h4>
+<h4>Checkpoint: Read through <a href="http://nlp.stanford.edu/IR-book/html/htmledition/stemming-and-lemmatization-1.html">this description of stemming and lemmatization.
+</a></h4>
+
+<div class="youtube">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/D2cSnAK_5Fo" frameborder="0" allowfullscreen></iframe>
+<b>The text precessing pipeline</b>
+</div>
 
 <h3>Classification and Information Retrieval</h3>
 <p>
