--- a/141B/learningtext.html
+++ b/141B/learningtext.html
@@ -160,7 +160,15 @@ Similarities based on the bag of words or bag of n-grams models typically compar
 
 <h4>Checkpoint: Go through the jupyter notebook.</h4>
       
+      <div class="youtube">
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/VAo7pelyYUM" frameborder="0" allowfullscreen></iframe>
+	<b>Text Vectorization</b>
+      </div>
 
+      <div class="youtube">
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/iH3JMDiguMU" frameborder="0" allowfullscreen></iframe>
+	<b>Classifying Reuters news</b>
+      </div>
 
      <footer class="site-footer">
 	Copyright James Sharpnack &copy; 2016
