--- a/141B/index.html
+++ b/141B/index.html
@@ -52,7 +52,7 @@
   <tr><td><a href="api.html">10: Web data</a></td><td>api, request, json</td><td>Internet basics, data aquisition</td></tr>
   <tr><td><a href="learningtext.html">11: Learning from Text</a></td><td>nltk, scikit-learn, tokenization</td><td>From text to numbers, n-grams</td></tr>
   <tr><td><a href="parsinghtml.html">12: Processing web data</a></td><td>html, xml, beautifulsoup</td><td>Hypertext languages, structured data</td></tr>
-  <tr><td>13: Databases</td><td>sqlalchemy, query</td><td>Database systems</td></tr>
+  <tr><td><a href="sql.html">13: Databases</a></td><td>sqlalchemy, query</td><td>Database systems</td></tr>
   <tr><td>14: Geographical data</td><td>geoplotlib, geopy</td><td>Honest plots, choosing context</td></tr>
   <tr><td>15: Data visualization</td><td>plotly, ggplot</td><td>Graphics grammar</td></tr>
   <tr><td>16: Interactive data visualization</td><td>javascript basics, D3</td><td>Server side/client side processing, embedded script</td></tr>
