index changed for mapping

--- a/141B/index.html
+++ b/141B/index.html
@@ -53,7 +53,7 @@
   <tr><td><a href="learningtext.html">11: Learning from Text</a></td><td>nltk, scikit-learn, tokenization</td><td>From text to numbers, n-grams</td></tr>
   <tr><td><a href="parsinghtml.html">12: Processing web data</a></td><td>html, xml, beautifulsoup</td><td>Hypertext languages, structured data</td></tr>
   <tr><td><a href="sql.html">13: Databases</a></td><td>sqlalchemy, query</td><td>Database systems</td></tr>
-  <tr><td>14: Geographical data</td><td>geoplotlib, geopy</td><td>Honest plots, choosing context</td></tr>
+  <tr><td><a href="mapping.html">14: Geographical data</a></td><td>basemap, patches</td><td>GIS data, map projections</td></tr>
   <tr><td>15: Data visualization</td><td>plotly, ggplot</td><td>Graphics grammar</td></tr>
   <tr><td>16: Interactive data visualization</td><td>javascript basics, D3</td><td>Server side/client side processing, embedded script</td></tr>
 </table>
